--- a/WebConsulting/efpt.config.json
+++ b/WebConsulting/efpt.config.json
@@ -19,6 +19,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[ApplicationServices]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Articles]",
          "ObjectType": 0
       },
